openshift/Service.yaml
kind: Service
apiVersion: v1
metadata:
  name: issos
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: issos
  type: ClusterIP
  sessionAffinity: None
