openshift/Route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: issos
spec:
  host: issos-zaharovdm.apps-crc.testing
  to:
    kind: Service
    name: issos
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
